[gd_scene load_steps=8 format=3 uid="uid://cq5r4oojxyu5a"]

[ext_resource type="Script" path="res://src/menus/OptionsPanel.gd" id="1_axmuv"]
[ext_resource type="Theme" uid="uid://nnr7pyxv7mve" path="res://src/ui/PaperHeroLabelTheme.tres" id="2_6cvgy"]
[ext_resource type="Theme" uid="uid://rv7rm10d10gc" path="res://src/ui/BlueWoodPanelTheme.tres" id="3_io088"]
[ext_resource type="Theme" uid="uid://d36tu8qosbiom" path="res://src/ui/RedButtonTheme.tres" id="4_06n2g"]
[ext_resource type="PackedScene" uid="uid://cpxj4aeuv006l" path="res://addons/dj/MuteButtonList.tscn" id="5_bdku5"]
[ext_resource type="PackedScene" uid="uid://dsft6f7x2lk4v" path="res://src/menus/ControlsPanel.tscn" id="7_arbaq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6sn6c"]
bg_color = Color(0.94902, 0.811765, 0.615686, 1)

[node name="OptionsPanel" type="CanvasLayer"]
layer = 5
script = ExtResource("1_axmuv")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_6sn6c")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/VBoxContainer/CenterContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme = ExtResource("2_6cvgy")
theme_override_font_sizes/normal_font_size = 64
bbcode_enabled = true
text = "[center]Options[/center]"
fit_content = true
scroll_active = false

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
alignment = 1

[node name="CenterContainer2" type="CenterContainer" parent="PanelContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/VBoxContainer/HBoxContainer/CenterContainer2"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/VBoxContainer/HBoxContainer/CenterContainer2/VBoxContainer2"]
layout_mode = 2
theme = ExtResource("3_io088")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/HBoxContainer/CenterContainer2/VBoxContainer2/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="ResetSaveDataButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer/CenterContainer2/VBoxContainer2/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
focus_neighbor_top = NodePath("../../../../../../../../MainMenuButton")
theme = ExtResource("4_06n2g")
text = "Reset Save Data"

[node name="UnlockAllButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer/CenterContainer2/VBoxContainer2/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme = ExtResource("4_06n2g")
text = "Unlock All Puzzles"

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer/VBoxContainer/HBoxContainer/CenterContainer2/VBoxContainer2/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2

[node name="MuteButtonList" parent="PanelContainer/VBoxContainer/HBoxContainer/CenterContainer2/VBoxContainer2/PanelContainer/VBoxContainer" instance=ExtResource("5_bdku5")]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="ControlsPanel" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer" instance=ExtResource("7_arbaq")]
custom_minimum_size = Vector2(0, 550)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="DataResetConfirmationDialog" type="ConfirmationDialog" parent="."]
unique_name_in_owner = true
initial_position = 2
size = Vector2i(600, 303)
transparent = true
keep_title_visible = false
theme = ExtResource("4_06n2g")
ok_button_text = "Reset my datums!"
dialog_text = "Are you sure you want to reset the game's progress? This will re-lock any unlocked Puzzle Sets and Themes."
dialog_autowrap = true
cancel_button_text = "Nevermind!"

[node name="DataUnlockConfirmationDialog" type="ConfirmationDialog" parent="."]
unique_name_in_owner = true
initial_position = 2
size = Vector2i(700, 251)
theme = ExtResource("4_06n2g")
ok_button_text = "Yeah, give me the works!"
dialog_text = "Are you sure you want to unlock everything? Your current playthrough will be lost!"
dialog_autowrap = true
cancel_button_text = "Nevermind!"

[node name="MainMenuButton" type="Button" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
offset_left = 8.0
offset_top = 8.0
offset_right = 208.0
offset_bottom = 72.0
focus_neighbor_bottom = NodePath("../PanelContainer/VBoxContainer/HBoxContainer/CenterContainer2/VBoxContainer2/PanelContainer/VBoxContainer/ResetSaveDataButton")
theme = ExtResource("4_06n2g")
text = "< Main Menu"
